tests/type-errors/expr_cmp_ne_option.arl
archetype expr_cmp_ne_option

entry exec () {
  effect {
    var a : option<set<int>> = none;
    var b : option<set<int>> = none;
    do_require (a <> b, "ko")
  }
}
